--- a/homepage.html
+++ b/homepage.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="/css/homepage.css" />
     <link rel="stylesheet" href="/css/header.css" />
     <link rel="stylesheet" href="/css/slider.css" />
+    <link rel="stylesheet" href="/css/mouseFollow.css" />
 
     <script src="js/imagesloaded.pkgd.min.js"></script>
     <script src="js/TweenMax.min.js"></script>
@@ -45,21 +46,34 @@
         </p>
         <div class="line"></div>
         <div class="source">
-          <span>Source:</span>
-          https://brainrot.fandom.com/wiki/Bombardiro_Crocodillo
+          <div class="source-left">
+            <img src="/img/file_logo.svg" alt="" />
+            <span>Source:</span>
+            street voice , spotify , youtube
+          </div>
+          <div class="source-right">18 hours ago</div>
         </div>
-        <div class="file">
-          <span>File:</span>
-          https://brainrot.fandom.com/wiki/Bombardiro_Crocodillo
+        <div class="source">
+          <div class="source-left">
+            <img src="/img/file_logo.svg" alt="" />
+            <span>File:</span>
+            soundtrack_test_v2.3.1
+          </div>
+
+          <div class="source-right">2 days ago</div>
         </div>
       </div>
       <div class="right">
         <img src="/img/test.jpg" alt="" />
       </div>
 
-    <div class="slider" id="carousel">
-      
+      <div class="launch">Launch : 2025/02/31</div>
+      <div class="status">
+        Status : opeaning<img src="/img/green_dot.svg" alt="" />
+      </div>
     </div>
+
+    <div class="slider" id="carousel"></div>
 
     <div class="mouse-follow"></div>
     <div class="line" style="left: 25%"></div>
