--- a/homepage.html
+++ b/homepage.html
@@ -14,6 +14,9 @@
 
     <link rel="icon" href="/img/web-icon.png" type="image/png" />
     <link rel="stylesheet" href="/css/homepage.css" />
+    <link rel="stylesheet" href="/css/contactpage.css" />
+    <link rel="stylesheet" href="/css/musicpage.css" />
+    <link rel="stylesheet" href="/css/listeningpage.css" />
     <link rel="stylesheet" href="/css/header.css" />
     <link rel="stylesheet" href="/css/slider.css" />
     <link rel="stylesheet" href="/css/mouseFollow.css" />
@@ -23,13 +26,19 @@
   </head>
   <body>
     <div class="header">
-      <ul>
+      <ul id="linkul">
         <li>
-          <img src="/img/logo.svg" alt="" />
+          <img src="/img/logo.svg" alt="" id="homeLink" />
         </li>
-        <li>Contact</li>
-        <li>Music & Soundtrack</li>
-        <li>What I’m Listening To</li>
+        <li>
+          <p id="contactLink">Contact</p>
+        </li>
+        <li>
+          <p id="musicLink">Music & Soundtrack</p>
+        </li>
+        <li>
+          <p id="listeningLink">What I’m Listening To</p>
+        </li>
       </ul>
     </div>
 
@@ -71,17 +80,24 @@
       <div class="status">
         Status : opeaning<img src="/img/green_dot.svg" alt="" />
       </div>
+
+      <div class="slider-container">
+        <div class="slider" id="carousel"></div>
+      </div>
     </div>
 
-    <div class="slider" id="carousel"></div>
+    <div class="contactpage"></div>
+    <div class="musicpage"></div>
+    <div class="listeningpage"></div>
 
     <div class="mouse-follow"></div>
-    <div class="line" style="left: 25%"></div>
-    <div class="line" style="left: 50%"></div>
-    <div class="line" style="left: 75%"></div>
+    <div class="line" id="line1"></div>
+    <div class="line" id="line2"></div>
+    <div class="line" id="line3"></div>
     <div class="background-color"></div>
 
     <script src="/js/mouseFollow.js"></script>
     <script src="/js/slider.js"></script>
+    <script src="/js/linkAnimation.js"></script>
   </body>
 </html>
