--- a/homepage.html
+++ b/homepage.html
@@ -23,6 +23,8 @@
 
     <script src="js/imagesloaded.pkgd.min.js"></script>
     <script src="js/TweenMax.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/ScrollTrigger.min.js"></script>
   </head>
   <body>
     <div class="header">
@@ -83,7 +85,92 @@
     </div>
 
     <div class="slider-container">
-      <div class="slider" id="carousel"></div>
+      <div class="scroll" id="scroll">
+        <div class="scroll-item">
+          <div class="desc">
+            <span>CHAINE OU LAINE</span>
+          </div>
+          <img src="/img/test.jpg" alt="" />
+        </div>
+        <div class="scroll-item">
+          <div class="desc">
+            <span>CHAINE OU LAINE</span>
+          </div>
+          <img src="/img/test.jpg" alt="" />
+        </div>
+        <div class="scroll-item">
+          <div class="desc">
+            <span>CHAINE OU LAINE</span>
+          </div>
+          <img src="/img/test.jpg" alt="" />
+        </div>
+        <div class="scroll-item">
+          <div class="desc">
+            <span>CHAINE OU LAINE</span>
+          </div>
+          <img src="/img/test.jpg" alt="" />
+        </div>
+        <div class="scroll-item">
+          <div class="desc">
+            <span>CHAINE OU LAINE</span>
+          </div>
+          <img src="/img/test.jpg" alt="" />
+        </div>
+        <div class="scroll-item">
+          <div class="desc">
+            <span>CHAINE OU LAINE</span>
+          </div>
+          <img src="/img/test.jpg" alt="" />
+        </div>
+        <div class="scroll-item">
+          <div class="desc">
+            <span>CHAINE OU LAINE</span>
+          </div>
+          <img src="/img/test.jpg" alt="" />
+        </div>
+        <div class="scroll-item">
+          <div class="desc">
+            <span>CHAINE OU LAINE</span>
+          </div>
+          <img src="/img/test.jpg" alt="" />
+        </div>
+        <div class="scroll-item">
+          <div class="desc">
+            <span>CHAINE OU LAINE</span>
+          </div>
+          <img src="/img/test.jpg" alt="" />
+        </div>
+        <div class="scroll-item">
+          <div class="desc">
+            <span>CHAINE OU LAINE</span>
+          </div>
+          <img src="/img/test.jpg" alt="" />
+        </div>
+        <div class="scroll-item">
+          <div class="desc">
+            <span>CHAINE OU LAINE</span>
+          </div>
+          <img src="/img/test.jpg" alt="" />
+        </div>
+        <div class="scroll-item">
+          <div class="desc">
+            <span>CHAINE OU LAINE</span>
+          </div>
+          <img src="/img/test.jpg" alt="" />
+        </div>
+        <div class="scroll-item">
+          <div class="desc">
+            <span>CHAINE OU LAINE</span>
+          </div>
+          <img src="/img/test.jpg" alt="" />
+        </div>
+        <div class="scroll-item">
+          <div class="desc">
+            <span>CHAINE OU LAINE</span>
+          </div>
+          <img src="/img/test.jpg" alt="" />
+        </div>
+      </div>
     </div>
 
     <div class="contactpage"></div>
