--- a/homepage.html
+++ b/homepage.html
@@ -173,7 +173,15 @@
       </div>
     </div>
 
-    <div class="contactpage"></div>
+    <div class="contactpage">
+      <div class="content">
+        <img src="/img/card1.svg" alt="" id="card1" />
+        <img src="/img/card2.svg" alt="" id="card2" />
+        <img src="/img/card3.svg" alt="" id="card3" />
+
+        <img src="/img/contact-background.svg" alt="" id="contact-background" />
+      </div>
+    </div>
     <div class="musicpage"></div>
     <div class="listeningpage"></div>
 
@@ -186,5 +194,6 @@
     <script src="/js/mouseFollow.js"></script>
     <script src="/js/slider.js"></script>
     <script src="/js/linkAnimation.js"></script>
+    <script src="js/contactScroll.js"></script>
   </body>
 </html>
