--- a/homepage.html
+++ b/homepage.html
@@ -46,8 +46,8 @@
 
     <div class="homepage">
       <div class="left">
-        <h2>Testing 1</h2>
-        <p>
+        <h2 id="title">Testing 1</h2>
+        <p id="intro">
           No one shall be subjected to arbitrary arrest, detention or exile.
           Everyone is entitled in full equality to a fair and public hearing by
           an independent and impartial tribunal. <br class="br" />
@@ -75,7 +75,7 @@
         </div>
       </div>
       <div class="right">
-        <img src="/img/test.jpg" alt="" />
+        <img src="/img/slider/slider1.jpg" alt="" id="right-img" />
       </div>
 
       <div class="launch">Launch : 2025/02/31</div>
@@ -90,85 +90,91 @@
           <div class="desc">
             <span>CHAINE OU LAINE</span>
           </div>
-          <img src="/img/test.jpg" alt="" />
+          <img src="/img/slider/slider14.jpg" alt="" />
         </div>
         <div class="scroll-item">
           <div class="desc">
             <span>CHAINE OU LAINE</span>
           </div>
-          <img src="/img/test.jpg" alt="" />
+          <img src="/img/slider/slider15.jpg" alt="" />
         </div>
         <div class="scroll-item">
           <div class="desc">
             <span>CHAINE OU LAINE</span>
           </div>
-          <img src="/img/test.jpg" alt="" />
+          <img src="/img/slider/slider1.jpg" alt="" />
         </div>
         <div class="scroll-item">
           <div class="desc">
             <span>CHAINE OU LAINE</span>
           </div>
-          <img src="/img/test.jpg" alt="" />
+          <img src="/img/slider/slider2.jpg" alt="" />
         </div>
         <div class="scroll-item">
           <div class="desc">
             <span>CHAINE OU LAINE</span>
           </div>
-          <img src="/img/test.jpg" alt="" />
+          <img src="/img/slider/slider3.jpg" alt="" />
         </div>
         <div class="scroll-item">
           <div class="desc">
             <span>CHAINE OU LAINE</span>
           </div>
-          <img src="/img/test.jpg" alt="" />
+          <img src="/img/slider/slider4.jpg" alt="" />
         </div>
         <div class="scroll-item">
           <div class="desc">
             <span>CHAINE OU LAINE</span>
           </div>
-          <img src="/img/test.jpg" alt="" />
+          <img src="/img/slider/slider5.jpg" alt="" />
         </div>
         <div class="scroll-item">
           <div class="desc">
             <span>CHAINE OU LAINE</span>
           </div>
-          <img src="/img/test.jpg" alt="" />
+          <img src="/img/slider/slider6.jpg" alt="" />
         </div>
         <div class="scroll-item">
           <div class="desc">
             <span>CHAINE OU LAINE</span>
           </div>
-          <img src="/img/test.jpg" alt="" />
+          <img src="/img/slider/slider7.jpg" alt="" />
         </div>
         <div class="scroll-item">
           <div class="desc">
             <span>CHAINE OU LAINE</span>
           </div>
-          <img src="/img/test.jpg" alt="" />
+          <img src="/img/slider/slider8.jpg" alt="" />
         </div>
         <div class="scroll-item">
           <div class="desc">
             <span>CHAINE OU LAINE</span>
           </div>
-          <img src="/img/test.jpg" alt="" />
+          <img src="/img/slider/slider9.jpg" alt="" />
         </div>
         <div class="scroll-item">
           <div class="desc">
             <span>CHAINE OU LAINE</span>
           </div>
-          <img src="/img/test.jpg" alt="" />
+          <img src="/img/slider/slider10.jpg" alt="" />
         </div>
         <div class="scroll-item">
           <div class="desc">
             <span>CHAINE OU LAINE</span>
           </div>
-          <img src="/img/test.jpg" alt="" />
+          <img src="/img/slider/slider11.jpg" alt="" />
         </div>
         <div class="scroll-item">
           <div class="desc">
             <span>CHAINE OU LAINE</span>
           </div>
-          <img src="/img/test.jpg" alt="" />
+          <img src="/img/slider/slider12.jpg" alt="" />
+        </div>
+        <div class="scroll-item">
+          <div class="desc">
+            <span>CHAINE OU LAINE</span>
+          </div>
+          <img src="/img/slider/slider13.jpg" alt="" />
         </div>
       </div>
     </div>
