--- a/homepage.html
+++ b/homepage.html
@@ -180,13 +180,12 @@
     </div>
 
     <div class="contactpage">
-      <div class="content">
+      <div class="cards">
         <img src="/img/card1.svg" alt="" id="card1" />
         <img src="/img/card2.svg" alt="" id="card2" />
         <img src="/img/card3.svg" alt="" id="card3" />
-
-        <img src="/img/contact-background.svg" alt="" id="contact-background" />
       </div>
+      <img src="/img/contact-background.svg" alt="" id="contact-background" />
     </div>
     <div class="musicpage"></div>
     <div class="listeningpage"></div>
