add imgData, status and launch can change

--- a/homepage.html
+++ b/homepage.html
@@ -78,9 +78,12 @@
         <img src="/img/slider/slider1.jpg" alt="" id="right-img" />
       </div>
 
-      <div class="launch">Launch : 2025/02/31</div>
+      <div class="launch">
+        Launch : <span id="launch-span">2025/02/31</span>
+      </div>
       <div class="status">
-        Status : opeaning<img src="/img/green_dot.svg" alt="" />
+        Status : <span id="status-span">opening</span
+        ><img src="/img/green_dot.svg" alt="" id="status-dot" />
       </div>
     </div>
 
