--- a/homepage.html
+++ b/homepage.html
@@ -85,6 +85,7 @@
         Status : <span id="status-span">opening</span
         ><img src="/img/green_dot.svg" alt="" id="status-dot" />
       </div>
+      <div class="block"></div>
     </div>
 
     <div class="slider-container">
